test/cases/compile_errors/stage1/obj/generic_fn_as_parameter_without_comptime_keyword.zig
fn f(_: fn (anytype) void) void {}
fn g(_: anytype) void {}
export fn entry() void {
    f(g);
}

// error
// backend=stage1
// target=native
//
// tmp.zig:1:9: error: parameter of type 'fn (anytype) anytype' must be declared comptime
